--- a/src/main/resources/public/admin.html
+++ b/src/main/resources/public/admin.html
@@ -35,30 +35,30 @@
               </div>
             </div>
             <div class="w3-col s2">
-              <div class="pointer w3-center" style="margin-top: 8px">
-                <span id="fund-account" class="fa fa-user blue-text option">
+              <div class="pointer w3-center" style="margin-top: 12px">
+                <span id="fund-account" class="fa fa-user blue-text option" style="font-size: 20px;">
                 </span>
                 <p class="no-margin x-small">Fund Account</p>
               </div>
             </div>
 
             <div class="w3-col s2">
-              <div class="w3-center pointer" style="margin-top: 8px">
-                <span id="pending" class="fa fa-user-plus grey-text-2 option">
+              <div class="w3-center pointer" style="margin-top: 12px">
+                <span id="pending" class="fa fa-user-plus grey-text-2 option" style="font-size: 20px;">
                 </span>
                 <p class="no-margin x-small">Pending</p>
               </div>
             </div>
             <div class="w3-col s2">
-              <div class="pointer w3-center" style="margin-top: 8px">
-                <span id="successful" class="fa fa-users grey-text-2 option">
+              <div class="pointer w3-center" style="margin-top: 12px">
+                <span id="successful" class="fa fa-users grey-text-2 option" style="font-size: 20px;">
                 </span>
                 <p class="no-margin x-small">Completed</p>
               </div>
             </div>
             <div class="w3-col s2">
-              <div class="pointer w3-center" style="margin-top: 8px">
-                <span id="declined" class="fa fa-users grey-text-2 option">
+              <div class="pointer w3-center" style="margin-top: 12px">
+                <span id="declined" class="fa fa-users grey-text-2 option" style="font-size: 20px;">
                 </span>
                 <p class="no-margin x-small">Declined</p>
               </div>
