--- a/src/main/resources/public/dashboard.html
+++ b/src/main/resources/public/dashboard.html
@@ -6,7 +6,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>StandardFX - Dashboard</title>
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
+	<link rel="stylesheet" href="./font-awesome-4.7.0/css/font-awesome.min.css">
 	<meta name="theme-color" content="#E6ECF0" />
 	<meta name="msapplication-navbutton-color" content="#E6ECF0" />
 	<meta name="apple-mobile-web-app-capable" content="yes" />
@@ -18,12 +19,12 @@
 
 	<script src="./js/moment.js"></script>
 	<div class="gtranslate_wrapper"></div>
-  <script>window.gtranslateSettings = {"default_language":"en","native_language_names":true,"detect_browser_language":true,"wrapper_selector":".gtranslate_wrapper"}</script>
-  <script src="https://cdn.gtranslate.net/widgets/latest/float.js" defer></script>
+	<script>window.gtranslateSettings = { "default_language": "en", "native_language_names": true, "detect_browser_language": true, "wrapper_selector": ".gtranslate_wrapper" }</script>
+	<script src="https://cdn.gtranslate.net/widgets/latest/float.js" defer></script>
 </head>
 
 <body style="background-color: rgb(230, 236, 240)">
-	<div id="dashboard-spinner" class="fa fa-spinner fa-spin w3-jumbo opacity-1 w3-text-blue"
+	<div id="dashboard-spinner" class="fa fa-spinner fa-spin w3-jumbo opacity-1 blue-text"
 		style="position: absolute; top: 45%; display: block;"></div>
 	<div id="dashboard-container" class="w3-animate-opacity" style="display: none">
 		<section>
@@ -89,7 +90,7 @@
 
 			<div id="nav-items" class="w3-bar-block opacity-0 w3-hide-large w3-animate-right"
 				style="display: none; background-color: rgb(230, 236, 240)">
-				
+
 				<div class="w3-bar-item">
 					<p id="open-invest-modal-2" class="big pointer blue-text">
 						<span class="fa fa-line-chart x-small w3-padding-small"></span>Invest
@@ -406,7 +407,7 @@
 			<div id="withdraw-modal" class="w3-modal w3-animate-opacity">
 				<div class="w3-modal-content blue-text-2 w3-round withdraw"
 					style="width: 30%; position: relative; margin-top: 100px">
-					<div id="withdraw-spinner" class="fa fa-spinner fa-spin w3-jumbo opacity-1 w3-text-blue"
+					<div id="withdraw-spinner" class="fa fa-spinner fa-spin w3-jumbo opacity-1 blue-text"
 						style="position: absolute; top: 42%; left: 42%; display: none"></div>
 					<div class="padding-4">
 						<span id="close-withdraw-modal" class="fa fa-times w3-right w3-text-red pointer"
@@ -437,7 +438,7 @@
 									<p class="small">You will receive</p>
 								</div>
 								<div class="w3-col s6">
-									<p class="small w3-right">0 USD</p>
+									<p class="small w3-right"><span id="receive" class="blue-text"></span> USD</p>
 								</div>
 							</div>
 							<p class="small blue-text">Withdrawal Terms</p>
@@ -459,6 +460,9 @@
 					</div>
 
 					<div id="otp-container" class="padding-5" style="display: none">
+						<div style="display: flex; justify-content: center; align-items: center;">
+							<div class="blue-background" style="height: 30px; width: 30px; border-radius: 30px; display: flex; justify-content: center; align-items: center;"><span class="fa fa-check"></span></div>
+						</div>
 						<p class="x-big w3-center" style="font-weight: 500">Transaction is Processing</p>
 						<div>
 							<p class="small">Withdrawal Request is being processed by StandardFX Financial Team.
@@ -568,7 +572,7 @@
 		</div>
 	</div>
 	<div id="start-conversation-card" class="w3-card w3-animate-right w3-white live-chat" style="z-index: 0">
-		<div id="start-conversation-spinner" class="fa fa-spinner fa-spin w3-jumbo opacity-2 w3-text-blue"
+		<div id="start-conversation-spinner" class="fa fa-spinner fa-spin w3-jumbo opacity-2 blue-text"
 			style="position: absolute; top: 45%; right: 42%; z-index: 1"></div>
 		<div id="start-conversation-white" class="opacity-2">
 			<div class="green-background"
@@ -626,7 +630,7 @@
 	</div>
 
 	<div id="conversation-card" class="w3-animate-opacity w3-card w3-white live-chat" style="z-index: 20">
-		<div id="conversation-spinner" class="fa fa-spinner fa-spin w3-jumbo opacity-1 w3-text-blue opacity-1"
+		<div id="conversation-spinner" class="fa fa-spinner fa-spin w3-jumbo opacity-1 blue-text opacity-1"
 			style="position: absolute; top: 45%; right: 42%; z-index: 1"></div>
 		<div id="conversation-white" class="w3-round opacity-0">
 			<div class="green-background" style="padding: 16px 24px">
@@ -872,8 +876,7 @@
 						</div>
 
 						<div style="margin-top: 24px">
-							<div id="add-wallet"
-								class="blue-background-light w3-round w3-padding-large pointer w3-center"
+							<div id="add-wallet" class="blue-background w3-round w3-padding-large pointer w3-center"
 								style="width: 20%">Add wallet</div>
 						</div>
 
@@ -938,101 +941,107 @@
 				<span id="close-investment-plan-modal" class="fa fa-times w3-text-red w3-right pointer"></span>
 			</div>
 			<div class="w3-padding-64 w3-padding">
-				<p class="huge blue-text-light w3-center" style="font-weight: 600; padding: 0px 32px;">CRYPTOCURRENCY INVESTMENT PLANS</p>
-				<p class="w3-center" style="padding: 0px 32px;">We have a wide array of investment plans for our investors to choose from.
-				  Choose from the options below the investment plan which best suits you. </p>
+				<p class="huge blue-text-light w3-center" style="font-weight: 600; padding: 0px 24px;">CRYPTOCURRENCY
+					INVESTMENT PLANS</p>
+				<p class="w3-center" style="padding: 0px 24px 24px;">We have a wide array of investment plans for our
+					investors to choose from.
+					Choose from the options below the investment plan which best suits you. </p>
 				<div class="w3-row">
-				  <div class="w3-col l2 w3-padding w3-round-large w3-white" style="margin-bottom: 32px;">
-					<div>
-					  <div class="w3-padding-32"
-						style="display: flex; justify-content: center; align-items: center; border-bottom: 1px solid rgb(238, 238, 238);">
-						<p class="large w3-center no-margin">Starter Plan</p>
-					  </div>
-					  <div class="w3-padding-24">
-						<p class="no-margin large w3-center" style="font-weight: 500">
-						  $50 - $999</p>
-					  </div>
-					  <div class="w3-padding-24" style="border-bottom: 1px solid rgb(238, 238, 238)">
-						<p class="no-margin w3-center">10% Daily</p>
-					  </div>
-					  <div class="w3-padding-24" style="border-bottom: 1px solid rgb(238, 238, 238)">
-						<p class="no-margin w3-center">24 hours</p>
-					  </div>
-					  <div class="w3-padding-24">
-						<div class="w3-padding-large blue-background w3-center x-big w3-round blue-text-light pointer invest-now">
-						  Invest Now</div>
-					  </div>
+					<div class="w3-col l2 w3-padding w3-round-large w3-white" style="margin-bottom: 32px;">
+						<div>
+							<div class="w3-padding-32"
+								style="display: flex; justify-content: center; align-items: center; border-bottom: 1px solid rgb(238, 238, 238);">
+								<p class="large w3-center no-margin">Starter Plan</p>
+							</div>
+							<div class="w3-padding-24">
+								<p class="no-margin large w3-center" style="font-weight: 500">
+									$50 - $999</p>
+							</div>
+							<div class="w3-padding-24" style="border-bottom: 1px solid rgb(238, 238, 238)">
+								<p class="no-margin w3-center">10% Daily</p>
+							</div>
+							<div class="w3-padding-24" style="border-bottom: 1px solid rgb(238, 238, 238)">
+								<p class="no-margin w3-center">24 hours</p>
+							</div>
+							<div class="w3-padding-24">
+								<div
+									class="w3-padding-large blue-background w3-center x-big w3-round blue-text-light pointer invest-now">
+									Invest Now</div>
+							</div>
+						</div>
 					</div>
-				  </div>
-				  <div class="w3-col l2 w3-padding w3-round-large w3-white" style="margin-bottom: 32px;">
-					<div>
-					  <div class="w3-padding-32"
-						style="display: flex; justify-content: center; align-items: center; border-bottom: 1px solid rgb(238, 238, 238);">
-						<p class="large w3-center no-margin">Advanced Plan</p>
-					  </div>
-					  <div class="w3-padding-24">
-						<p class="no-margin large w3-center" style="font-weight: 500">
-						  $1,000 - $9,999</p>
-					  </div>
-					  <div class="w3-padding-24" style="border-bottom: 1px solid rgb(238, 238, 238)">
-						<p class="no-margin w3-center">20% Daily</p>
-					  </div>
-					  <div class="w3-padding-24" style="border-bottom: 1px solid rgb(238, 238, 238)">
-						<p class="no-margin w3-center">48 hours</p>
-					  </div>
-					  <div class="w3-padding-24">
-						<div class="w3-padding-large blue-background w3-center x-big w3-round blue-text-light pointer invest-now">
-						  Invest Now</div>
-					  </div>
+					<div class="w3-col l2 w3-padding w3-round-large w3-white" style="margin-bottom: 32px;">
+						<div>
+							<div class="w3-padding-32"
+								style="display: flex; justify-content: center; align-items: center; border-bottom: 1px solid rgb(238, 238, 238);">
+								<p class="large w3-center no-margin">Advanced Plan</p>
+							</div>
+							<div class="w3-padding-24">
+								<p class="no-margin large w3-center" style="font-weight: 500">
+									$1,000 - $9,999</p>
+							</div>
+							<div class="w3-padding-24" style="border-bottom: 1px solid rgb(238, 238, 238)">
+								<p class="no-margin w3-center">20% Daily</p>
+							</div>
+							<div class="w3-padding-24" style="border-bottom: 1px solid rgb(238, 238, 238)">
+								<p class="no-margin w3-center">48 hours</p>
+							</div>
+							<div class="w3-padding-24">
+								<div
+									class="w3-padding-large blue-background w3-center x-big w3-round blue-text-light pointer invest-now">
+									Invest Now</div>
+							</div>
+						</div>
 					</div>
-				  </div>
-				  <div class="w3-col l2 w3-padding w3-round-large w3-white" style="margin-bottom: 32px;">
-					<div>
-					  <div class="w3-padding-32"
-						style="display: flex; justify-content: center; align-items: center; border-bottom: 1px solid rgb(238, 238, 238);">
-						<p class="large w3-center no-margin">Standard Plan</p>
-					  </div>
-					  <div class="w3-padding-24">
-						<p class="no-margin large w3-center" style="font-weight: 500">
-						  $10,000 - $49,999</p>
-					  </div>
-					  <div class="w3-padding-24" style="border-bottom: 1px solid rgb(238, 238, 238)">
-						<p class="no-margin w3-center">40% Daily</p>
-					  </div>
-					  <div class="w3-padding-24" style="border-bottom: 1px solid rgb(238, 238, 238)">
-						<p class="no-margin w3-center">48 hours</p>
-					  </div>
-					  <div class="w3-padding-24">
-						<div class="w3-padding-large blue-background w3-center x-big w3-round blue-text-light pointer invest-now">
-						  Invest Now</div>
-					  </div>
+					<div class="w3-col l2 w3-padding w3-round-large w3-white" style="margin-bottom: 32px;">
+						<div>
+							<div class="w3-padding-32"
+								style="display: flex; justify-content: center; align-items: center; border-bottom: 1px solid rgb(238, 238, 238);">
+								<p class="large w3-center no-margin">Standard Plan</p>
+							</div>
+							<div class="w3-padding-24">
+								<p class="no-margin large w3-center" style="font-weight: 500">
+									$10,000 - $49,999</p>
+							</div>
+							<div class="w3-padding-24" style="border-bottom: 1px solid rgb(238, 238, 238)">
+								<p class="no-margin w3-center">40% Daily</p>
+							</div>
+							<div class="w3-padding-24" style="border-bottom: 1px solid rgb(238, 238, 238)">
+								<p class="no-margin w3-center">48 hours</p>
+							</div>
+							<div class="w3-padding-24">
+								<div
+									class="w3-padding-large blue-background w3-center x-big w3-round blue-text-light pointer invest-now">
+									Invest Now</div>
+							</div>
+						</div>
 					</div>
-				  </div>
-				  <div class="w3-col l2 w3-padding w3-round-large w3-white" style="margin-bottom: 32px;">
-					<div>
-					  <div class="w3-padding-32"
-						style="display: flex; justify-content: center; align-items: center; border-bottom: 1px solid rgb(238, 238, 238);">
-						<p class="large w3-center no-margin">Premium Plan</p>
-					  </div>
-					  <div class="w3-padding-24">
-						<p class="no-margin large w3-center" style="font-weight: 500">
-						  $50,000 - $0.00</p>
-					  </div>
-					  <div class="w3-padding-24" style="border-bottom: 1px solid rgb(238, 238, 238)">
-						<p class="no-margin w3-center">100% Daily</p>
-					  </div>
-					  <div class="w3-padding-24" style="border-bottom: 1px solid rgb(238, 238, 238)">
-						<p class="no-margin w3-center">72 hours</p>
-					  </div>
-					  <div class="w3-padding-24">
-						<div class="w3-padding-large blue-background w3-center x-big w3-round blue-text-light pointer invest-now">
-						  Invest Now</div>
-					  </div>
+					<div class="w3-col l2 w3-padding w3-round-large w3-white" style="margin-bottom: 32px;">
+						<div>
+							<div class="w3-padding-32"
+								style="display: flex; justify-content: center; align-items: center; border-bottom: 1px solid rgb(238, 238, 238);">
+								<p class="large w3-center no-margin">Premium Plan</p>
+							</div>
+							<div class="w3-padding-24">
+								<p class="no-margin large w3-center" style="font-weight: 500">
+									$50,000 - $0.00</p>
+							</div>
+							<div class="w3-padding-24" style="border-bottom: 1px solid rgb(238, 238, 238)">
+								<p class="no-margin w3-center">100% Daily</p>
+							</div>
+							<div class="w3-padding-24" style="border-bottom: 1px solid rgb(238, 238, 238)">
+								<p class="no-margin w3-center">72 hours</p>
+							</div>
+							<div class="w3-padding-24">
+								<div
+									class="w3-padding-large blue-background w3-center x-big w3-round blue-text-light pointer invest-now">
+									Invest Now</div>
+							</div>
+						</div>
 					</div>
-				  </div>
-				  
+
 				</div>
-			  </div>
+			</div>
 		</div>
 	</div>
 	<div id="add-wallet-modal" class="w3-modal w3-animate-opacity">
@@ -1048,8 +1057,8 @@
 
 					</select>
 					<input id="wallet-address" class="w3-input w3-margin-top" type="text" placeholder="Wallet Address">
-					<div class="w3-margin-top blue-background-light w3-padding w3-center w3-round pointer"
-						id="save-wallet">Add wallet</div>
+					<div class="w3-margin-top blue-background w3-padding w3-center w3-round pointer" id="save-wallet">
+						Add wallet</div>
 				</div>
 			</div>
 		</div>
