--- a/src/main/resources/public/dashboard.html
+++ b/src/main/resources/public/dashboard.html
@@ -6,8 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>StandardFX - Dashboard</title>
-	<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
-	<link rel="stylesheet" href="./font-awesome-4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<meta name="theme-color" content="#E6ECF0" />
 	<meta name="msapplication-navbutton-color" content="#E6ECF0" />
 	<meta name="apple-mobile-web-app-capable" content="yes" />
@@ -1063,7 +1062,7 @@
 			</div>
 		</div>
 	</div>
-	<script src="//code.tidio.co/z7bksa5jr6zwb1jre35dxzgboeaj1ak4.js" async></script>
+	<script src="//code.tidio.co/lykcvy0qjewjmkxdeqkekcsp100xv179.js" async></script>
 
 	<script src="./js/dashboard.js"></script>
 	<script src="./js/navBar.js"></script>
